[project]
authors = [
  {name = "mst-mkt", email = "131662659+mst-mkt@users.noreply.github.com"},
]
dependencies = []
description = "🧶's jupyter-notebook template with rye, uv, ruff, mypy"
name = "jupyter-template"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = []
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_template"]
