[project]
authors = [
  {name = "mst-mkt", email = "131662659+mst-mkt@users.noreply.github.com"},
]
dependencies = [
    "matplotlib>=3.8.4",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "openai>=1.20.0",
    "tensorflow>=2.16.1",
    "pillow>=10.3.0",
    "tslearn>=0.6.3",
    "statsmodels>=0.14.2",
    "scikit-learn>=1.4.2",
]
description = "🧶's jupyter-notebook template with rye, uv, ruff, mypy"
name = "jupyter-template"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = []
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_template"]
